# CNSV

./: .gitignore  CNSV 总需求文档 .MD  README.md  pyproject.toml  requirements.txt  《CNSV 主程序 V1.0 接线开发规格文档》.MD
config/: data_source.yml  report.yml  runtime.yml
docs/: backtest.html  baseline.html  data.html  decision_support.html  features.html  index.html  live.html  path.html  risk.html  trading.html  validation.html
reports/: latest_baseline_model_report.md  latest_baseline_validation_report.md  latest_data_report.md  latest_feature_report.md  latest_human_decision_support_report.md  latest_live_manual_decision_report.md  latest_observation_backtest_report.md  latest_path_distribution_report.md  latest_path_validation_report.md  latest_risk_explanation_report.md  latest_trading_decision_report.md
tests/: test_backtest_evaluator.py  test_backtest_metrics.py  test_backtest_registry.py  test_backtest_report.py  test_baseline_b0_random_walk.py  test_baseline_b1_historical_distribution.py  test_baseline_b2_state_grouped_distribution.py  test_baseline_b3_volatility_adjusted.py  test_baseline_cli.py  test_baseline_evaluator.py  test_baseline_models.py  test_baseline_registry.py  test_baseline_report_json.py  test_baseline_runner.py  test_baseline_validation.py  test_baseline_validation_cli.py  test_bucket_analysis.py  test_cli.py  test_data_manifest.py  test_downloader.py  test_downstream_ready.py  test_ev_engine.py  test_exit_engine.py  test_feature_cli.py  test_feature_quality.py  test_feature_registry.py  test_feature_report_json.py  test_features.py  test_live_report.py  (+48 more)
(+498 files in other folders)
